[gd_scene load_steps=19 format=3 uid="uid://cmea0uyohtxap"]

[ext_resource type="PackedScene" uid="uid://dowq8sj2jigyj" path="res://scenes/my_camera.tscn" id="1_0ly52"]
[ext_resource type="Script" path="res://scenes/universe.gd" id="1_hekgm"]
[ext_resource type="PackedScene" uid="uid://cs2ml6fv4sx38" path="res://scenes/black_hole.tscn" id="1_ya0al"]
[ext_resource type="PackedScene" uid="uid://cdklexx5nklgf" path="res://my_environment.tscn" id="3_q01wm"]
[ext_resource type="PackedScene" uid="uid://c2ehw1i4jl3fb" path="res://scenes/sun.tscn" id="3_upvk8"]
[ext_resource type="PackedScene" uid="uid://byjn8in8gaqi8" path="res://scenes/planet/terrestial_planet.tscn" id="4_fomw1"]
[ext_resource type="PackedScene" uid="uid://b6h7nni4ml57e" path="res://scenes/planet/desert_planet.tscn" id="6_43jkt"]
[ext_resource type="PackedScene" uid="uid://cxcqat7ok6jtu" path="res://scenes/build/desert_planet_building_gui.tscn" id="7_1p5ii"]
[ext_resource type="Script" path="res://scenes/space_object_ui.gd" id="7_7ripd"]
[ext_resource type="PackedScene" uid="uid://b43tj14o86p54" path="res://scenes/build/terrestial_planet_building_gui.tscn" id="8_v467m"]
[ext_resource type="PackedScene" uid="uid://ccqwylgpq5738" path="res://scenes/capital/capital_ui.tscn" id="9_qp22c"]
[ext_resource type="PackedScene" uid="uid://s5clp8u2etjp" path="res://scenes/build/sun_building_gui.tscn" id="10_07h0l"]
[ext_resource type="PackedScene" uid="uid://b770h2e1loeh" path="res://scenes/build/black_hole_building_gui.tscn" id="11_fj2w0"]
[ext_resource type="PackedScene" uid="uid://blb258kp6u7xe" path="res://scenes/quest/quest_ui.tscn" id="14_7iumb"]
[ext_resource type="PackedScene" uid="uid://cc4g5l57dmkgr" path="res://scenes/build/player_build_manager.tscn" id="15_kt4dx"]
[ext_resource type="PackedScene" uid="uid://cm4kc05e8n3c5" path="res://scenes/quest/QuestManager.tscn" id="16_ggiom"]
[ext_resource type="PackedScene" uid="uid://bnrrs3gvq7khm" path="res://scenes/speed_ui.tscn" id="16_yvu4i"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_d8hb0"]
size = Vector2(32, 32)

[node name="Universe" type="Node3D"]
script = ExtResource("1_hekgm")

[node name="MyCamera" parent="." instance=ExtResource("1_0ly52")]

[node name="WorldEnvironment" parent="." instance=ExtResource("3_q01wm")]

[node name="ObjectsZoom" type="Node3D" parent="."]

[node name="Objects" type="Node3D" parent="ObjectsZoom"]

[node name="BlackHole" parent="ObjectsZoom/Objects" instance=ExtResource("1_ya0al")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="StartSun" parent="ObjectsZoom/Objects/BlackHole" instance=ExtResource("3_upvk8")]
unique_name_in_owner = true
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -2.29472, 0, 0)

[node name="StartPlanet" parent="ObjectsZoom/Objects/BlackHole/StartSun" instance=ExtResource("4_fomw1")]
unique_name_in_owner = true
transform = Transform3D(0.003, 0, 0, 0, 0.003, 0, 0, 0, 0.003, 0, 0, 1.34333)

[node name="DesertPlanet" parent="ObjectsZoom/Objects/BlackHole/StartSun" instance=ExtResource("6_43jkt")]
transform = Transform3D(0.003, 0, 0, 0, 0.003, 0, 0, 0, 0.003, 0.127091, 0, 1.29505)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpaceObjectUI" type="Control" parent="UI" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_7ripd")
player = NodePath("../../PlayerData/Player1")

[node name="DesertPlanetBuildingGui" parent="UI/SpaceObjectUI" instance=ExtResource("7_1p5ii")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="TerrestialPlanetBuildingGui" parent="UI/SpaceObjectUI" instance=ExtResource("8_v467m")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SunPlanetBuildingGui" parent="UI/SpaceObjectUI" instance=ExtResource("10_07h0l")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="BlackHolePlanetBuildingGui" parent="UI/SpaceObjectUI" instance=ExtResource("11_fj2w0")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Button" type="Button" parent="UI/SpaceObjectUI"]
custom_minimum_size = Vector2(110, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -60.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Opens the build menu"
text = "Build"
icon = SubResource("PlaceholderTexture2D_d8hb0")

[node name="CapitalUI" parent="UI" node_paths=PackedStringArray("universe") instance=ExtResource("9_qp22c")]
unique_name_in_owner = true
layout_mode = 1
universe = NodePath("../..")

[node name="QuestUI" parent="UI" instance=ExtResource("14_7iumb")]
layout_mode = 1

[node name="SpeedUI" parent="UI" instance=ExtResource("16_yvu4i")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0

[node name="PlayerData" type="Node" parent="."]
unique_name_in_owner = true

[node name="Player1" type="Node" parent="PlayerData"]

[node name="PlayerBuildManager" parent="PlayerData/Player1" node_paths=PackedStringArray("player", "universe") instance=ExtResource("15_kt4dx")]
player = NodePath("..")
universe = NodePath("../../..")

[node name="QuestManager" parent="PlayerData/Player1" node_paths=PackedStringArray("player", "quest_ui") instance=ExtResource("16_ggiom")]
player = NodePath("..")
quest_ui = NodePath("../../../UI/QuestUI")

[connection signal="pressed" from="UI/SpaceObjectUI/Button" to="UI/SpaceObjectUI" method="_on_build_button_pressed"]
